--- a/index.html
+++ b/index.html
@@ -7,10 +7,19 @@
         a {
             color: red;
         }
-        div {
+        li {
             border: 1px solid black;
         }
-        div a {
+        li a {
+            color: blue;
+        }
+        #exec-bio {
+            background-color: lightgrey;
+        }
+        .bio-box {
+            border: 1px solid black;
+        }
+        .bio-box a {
             color: green;
         }
     </style>
@@ -29,16 +38,16 @@
       </li>
     </ul>
     <h2>I'm an h2</h2>
-    <div>
+    <div id="exec-bio" class="bio-box">
       <a href="https://example.com/">I'm a link</a>
     </div>
-    <div>
+    <div class="bio-box">
       <a href="https://example.com/">I'm a link</a>
     </div>
-    <div>
+    <div class="bio-box">
       <a href="https://example.com/">I'm a link</a>
     </div>
-    <div>
+    <div class="bio-box">
       <a href="https://example.com/">I'm a link</a>
     </div>
   </body>
