--- a/index.html
+++ b/index.html
@@ -16,8 +16,14 @@
         #exec-bio {
             background-color: lightgrey;
         }
+        #highlight-bio {
+            background-color: orange;
+        }
         .bio-box {
             border: 1px solid black;
+        }
+        .callout-box {
+            background-color: azure;
         }
         .bio-box a {
             color: green;
@@ -38,16 +44,16 @@
       </li>
     </ul>
     <h2>I'm an h2</h2>
-    <div id="exec-bio" class="bio-box">
+    <div id="exec-bio" class="bio-box callout-box">
       <a href="https://example.com/">I'm a link</a>
     </div>
-    <div class="bio-box">
+    <div class="bio-box callout-box">
       <a href="https://example.com/">I'm a link</a>
     </div>
-    <div class="bio-box">
-      <a href="https://example.com/">I'm a link</a>
+    <div class="bio-box callout-box">
+      <a href="https://example.com/" id="highlight-bio">I'm a link</a>
     </div>
-    <div class="bio-box">
+    <div class="bio-box callout-box">
       <a href="https://example.com/">I'm a link</a>
     </div>
   </body>
