--- a/index.html
+++ b/index.html
@@ -30,24 +30,72 @@
       /* SOCIAL STYLES */
       .social-link {
           background: rgba(150, 150, 150, 0.5);
-          color: #00f;
+          border-radius: 99px;
+          box-sizing: border-box;
+          color: #fff;
+          display: inline-block;
+          font-family: Arial, Helvetica, sans-serif;
+          font-size: 1rem;
+          font-weight: bold;
+          height: 2.5em;
+          line-height: 1;
+          padding-top: 0.85em;
+          text-align: center;
+          text-decoration: none;
+          vertical-align: middle;
+          width: 2.5em;
+      }
+      .social-list {
+        list-style: none;
+        padding: 0;
+        text-align: center;
+      }
+      .social-list > li {
+        display: inline-block;
+        margin: 0 0.5em;
       }
 
       /* BIO STYLES */
       .bio-wrapper {
+        background-color: #c0e0c3;
+        overflow: hidden;
+        margin: 0 auto 50px;
+        max-width: 960px;
         font-size: 24px;
       }
+      /* .bio-wrapper:after {
+        visibility: hidden;
+        display: block;
+        font-size: 0;
+        content: " ";
+        clear: both;
+        height: 0;
+      } */
       .bio-box {
           border: 1px solid #000;
+          box-sizing: border-box;
+          float: left;
           font-size: 1rem;
-          width: 50%;
-          padding: 20px;
+          /* margin-top: 3%;
+          margin-right: 3%;
+          margin-bottom: 3%;
+          margin-left: 3%; */
+          margin: 10% 1% 0%;
+          padding: 0 2% 2%;
+          width: 23%;
+      }
+      .bio-box img {
+        width: 100%;
       }
       .bio-box h3 {
+        color: #f0f;
         font-size: 1.5em;
+        margin: -40px 0 1em;
+        text-align: center;
       }
       .bio-copy {
         font-size: 1em;
+        line-height: 1.5;
       }
       .bio-copy a {
           color: #090;
@@ -58,21 +106,23 @@
 
     <div class="full-hero hero-home">
       <h1>I'm an h1</h1>
-      <ul>
+      <ul class="social-list">
         <li>
-          <a href="https://example.com/" class="social-link">Link</a>
+          <a href="https://example.com/" class="social-link">Fb</a>
         </li>
         <li>
-          <a href="https://example.com/" class="social-link">Link</a>
+          <a href="https://example.com/" class="social-link">Tw</a>
         </li>
         <li>
-          <a href="https://example.com/" class="social-link">Link</a>
+          <a href="https://example.com/" class="social-link">Gh</a>
         </li>
       </ul>
     </div>
     <h2>I'm an h2</h2>
     <div class="bio-wrapper">
+      
       <div class="bio-box">
+        <img src="http://placekitten.com/g/400/400">
         <h3>Michael Hartl</h3>
         <a href="https://twitter.com/mhartl" class="social-link">here</a>
         <div class="bio-copy">
@@ -92,8 +142,9 @@
         </div>
       </div>
       <div class="bio-box">
+        <img src="http://placekitten.com/g/400/400">
         <h3>Lee Donahoe</h3>
-        <a href="https://twitter.com/leedonahoe" class="social-link">here</a>
+        <a href="https://twitter.com/leedonahoe" class="social-link show">here</a>
         <div class="bio-copy">
           <p>
             When he's not literally swimming with sharks or hunting powder stashes on
@@ -104,6 +155,7 @@
         </div>
       </div>
       <div class="bio-box">
+        <img src="http://placekitten.com/g/400/400">
         <h3>Nick Merwin</h3>
         <a href="https://twitter.com/nickmerwin" class="social-link">here</a>
         <div class="bio-copy">
@@ -116,6 +168,7 @@
         </div>
       </div>
       <div class="bio-box">
+        <img src="http://placekitten.com/g/400/400">
         <h3>??</h3>
         <div class="bio-copy">
           <p>
@@ -124,6 +177,33 @@
         </div>
       </div>
     </div>
+      <p>
+        Learn Enough to Be Dangerous is a leader in the movement to teach the
+        world <em>technical sophistication</em>, which includes both "hard
+        skills" like coding, command lines, and version control, and "soft
+        skills" like guessing keyboard shortcuts, Googling error messages, and
+        knowing when to just reboot the darn thing.
+      </p>
+      <p>
+        We believe there are <strong>at least a billion people</strong> who can
+        benefit from learning technical sophistication, probably more. To join
+        our movement,
+        <a href="https://learnenough.com/#email_list">sign up for our official
+        email list</a> now.
+      </p>
+      <h3>Background</h3>
+      <p>
+        Learn Enough to Be Dangerous is an outgrowth of the
+        <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a> and the
+        <a href="https://www.softcover.io/">Softcover publishing platform</a>.
+        This page is part of the sample site for
+        <a href="https://learnenough.com/css-tutorial"><em>Learn Enough CSS and
+        Layout to Be Dangerous</em></a>, which teaches the basics of
+        <strong>C</strong>ascading <strong>S</strong>tyle
+        <strong>S</strong>heets, the language that allows web pages to be styled.
+        Other related tutorials can be found at
+        <a href="https://learnenough.com/">learnenough.com</a>.
+      </p>
     </div>
   </body>
 </html>
