--- a/gallery/index.html
+++ b/gallery/index.html
@@ -2,4 +2,14 @@
 layout: default
 ---
 
-I'm a 3 column page.
+<div class="gallery col-three">
+  <div class="col col-nav">
+    I'm da nav.
+  </div>
+  <div class="col col-content">
+    The main content.
+  </div>
+  <div class="col col-aside">
+    i'm on the right.
+  </div>
+</div>
