--- a/gallery/index.html
+++ b/gallery/index.html
@@ -11,6 +11,31 @@ layout: default
       <div>
         <img src="/images/small/slide1.jpg" alt="Image title 2">
       </div>
+      <div>
+        <img src="/images/small/slide1.jpg" alt="Image title 2">
+      </div>
+      <div>
+        <img src="/images/small/slide1.jpg" alt="Image title 2">
+      </div>
+      <div>
+        <img src="/images/small/slide1.jpg" alt="Image title 2">
+      </div>
+      <div>
+        <img src="/images/small/slide1.jpg" alt="Image title 2">
+      </div>
+      <div>
+        <img src="/images/small/slide1.jpg" alt="Image title 2">
+      </div>
+      <div>
+        <img src="/images/small/slide1.jpg" alt="Image title 2">
+      </div>
+      <div>
+        <img src="/images/small/slide1.jpg" alt="Image title 2">
+      </div>
+      <div>
+        <img src="/images/small/slide1.jpg" alt="Image title 2">
+      </div>
+      
     </div>
   </div>
   <div class="col col-content">
